# voxy

./: README.md  setup.cfg  troubleshooting.md
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: voxy_wip.ipynb
voxy/: __init__.py  base.py
voxy/examples/: usage_example.py
