[metadata]
name = voxy
version = 0.0.3
url = https://github.com/thorwhalen/voxy
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Facade for voice cloning and speech synthesis
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = voxy

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

